charts/invenio/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invenio-ingress
  annotations:
    kubernetes.io/ingress.class: webapprouting.kubernetes.azure.com
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - icl-invenio-dev.uksouth.cloudapp.azure.com
      #secretName: icl-invenio-dev.uksouth.cloudapp.azure.com-tls
      secretName: invenio-letsencrypt-secret
  rules:
    - host: icl-invenio-dev.uksouth.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              service:
                name: web
                port:
                  name: http
            pathType: Prefix
